--- a/src/app/test01/test01.component.html
+++ b/src/app/test01/test01.component.html
@@ -1,5 +1,22 @@
 <div class="container">
+  <header class="header">
+    <h1>Book an appointment</h1>
+    <h4>Our Investing topics</h4>
+    <h3>Pick a topic, then we'll find a time and place</h3>
+  </header>
 
-  <h1>Test 1</h1>
+  <div class="row btn-group-xs btn-group-md btn-group-horizontal custom-tdtheme">
+
+      <button type="button"  *ngFor="let buttonObj of buttonArr"
+      class="btn btn-default col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-offset-1 col-xs-10">{{buttonObj.text}}</button>
+
+    <!-- <button type="button" class="btn btn-default col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-12">Open a chequing account</button>
+    <button type="button" class="btn btn-default col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-12">Open a savings account</button>
+    <button type="button" class="btn btn-default col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-12">Open a U.S dollar account</button>
+    <button type="button" class="btn btn-default col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-12">Review my everyday banking needs</button>
+    <button type="button" class="btn btn-default col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-12">Switch to TD</button>
+    <button type="button" class="btn btn-default col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-12">Apply for overdraft protection</button> -->
+  </div>
 
 </div>
+
