--- a/src/app/test01/test01.component.html
+++ b/src/app/test01/test01.component.html
@@ -7,7 +7,7 @@
 
   <div class="row btn-group-xs btn-group-md btn-group-horizontal custom-tdtheme">
       <button class="btn btn-default col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-offset-1 col-xs-10" 
-        type="button" *ngFor="let buttonObj of buttonArr">{{buttonObj.text}}</button>
+        type="button" EqualheightDirective="TDbutton" *ngFor="let buttonObj of buttonArr">{{buttonObj.text}}</button>
   </div>
   <footer class="footer">
     <nav>
