--- a/src/app/test02/test02.component.html
+++ b/src/app/test02/test02.component.html
@@ -1,7 +1,8 @@
  <div class="test02">
     <div class="ngdialog ngdialog-theme-default col-xs-12 col-sm-8 col-md-6 col-lg-6">
 
-      <div uib-alert class="alert" *ngFor="let alert of alerts" [ngClass]="'alert-' + (alert.type || 'warning')" close="closeAlert($index)">{{alert.msg}}</div>
+      <label uib-alert class="alert" *ngFor="let alert of alerts"  aria-live="rude" role="alert"
+      [ngClass]="'alert-' + (alert.type || 'warning')" close="closeAlert($index)">{{alert.msg}}</label>
 
       <form class="future-banking" role="form">
 
@@ -9,15 +10,15 @@
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6">
               <i class="fa fa-credit-card fa-2x"></i>
-              <span class="lead header">Send Transfer</span>
+              <span class="lead header" role="heading" >Send Transfer</span>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6">
               <div class="btn-group" role="group">
                 <button class="btn btn-default">
                   <img class="profile-img" alt="profile image">
-                  <span id="user-name">John Smith</span>
+                  <span id="user-name" aria-live="polite">John Smith</span>
                 </button>
-                <button class="btn btn-default">
+                <button class="btn btn-default" aria-live="polite">
                   Sign out
                   <i class="fa fa-sign-out fa-lg"></i>
                 </button>
@@ -82,10 +83,12 @@
                     </div>
                     <div class="col-xs-6">
                       <select class="form-control">
+                      <optgroup>
                         <option>Every day</option>
                         <option>Weekly</option>
                         <option>Bi-weekly</option>
                         <option>Monthly</option>
+                      </optgroup>
                       </select>
                     </div>
                   </div>
@@ -101,21 +104,21 @@
             <div class="col-xs-12">
               <div class="row">
                 <div class="col-xs-12">
-                  <h4>Send to</h4>
+                  <h4 aria-live="assertive">Send to</h4>
 
                   <div class="row">
                     <div class="col-xs-8">
                       <img class="profile-img" alt="profile image">
-                      <h3 id="recipient">Jane Smith</h3>
+                      <h3 id="recipient" aria-live="assertive">Jane Smith</h3>
                     </div>
                     <div class="col-xs-4">
-                      <a role="link" href="/test2" class="change-user-link">Change recipient</a>
+                      <a role="link" href="/test2" class="change-user-link" aria-live="polite">Change recipient</a>
                     </div>
                   </div>
 
                   <hr/>
 
-                  <button type="button" role="button" class="btn btn-primary btn-send" (click)="addAlert()">Send {{300 | currency}}</button>
+                  <button type="button" aria-live="assertive" role="button" class="btn btn-primary btn-send" (click)="addAlert()">Send {{300 | currency}}</button>
 
                 </div>
               </div>
